integrate firebase with auth

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "^17.3.0",
     "@angular/compiler": "^17.3.0",
     "@angular/core": "^17.3.0",
+    "@angular/fire": "^17.0.0",
     "@angular/forms": "^17.3.0",
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
@@ -25,6 +26,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "bootstrap": "^5.3.6",
+    "firebase": "^9.22.0",
     "marked": "^15.0.12",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
